paho_cms_rightless: Redesign of the visual  interface.

--- a/paho_cms/css/colors.css
+++ b/paho_cms/css/colors.css
@@ -38,7 +38,6 @@ form
 {
 	background: #ffffff url(../images/pi_language_bar_bg.jpg) no-repeat;	
     color: #ffffff;
-	background-color: $FFF;
 }
 
 /*  */
@@ -86,7 +85,7 @@ ul#mainlevel-nav li
 
 ul#mainlevel-nav li a
 {
-/*	color: #ffffff; */
+	color: #ffffff;
 	background: transparent;
 }
 
@@ -222,23 +221,16 @@ ul#mainlevel-nav li a:hover
 }
 
 /* menu highlight */
-#left_inner_menu2
+#left_inner_menu2 
 {
 	background-color: #BBD6EF;
-}
-#left_inner_menu4 {
-	float:left;
-}
-
-#left_inner_menu4 .moduletable
-{
-	background: #BBD6EF;
 }
 
 #left_inner_menu2 a.mainlevel:link, #left_inner_menu2 a.mainlevel:visited 
 {
 	background-color: #BBD6EF;
 	color: #134A81;
+	color: #0066ee;
 	border-bottom: 1px solid #ffffff;	
 }
 
@@ -268,7 +260,7 @@ ul#mainlevel-nav li a:hover
 }
 
 /* encabezados anaranjados. los pone en su sitio */
-#left_inner_menu1 h3, #left_inner_menu2 h3, #left_inner_menu3 h3, #left_inner_menu4 h3 
+#left_inner_menu1 h3, #left_inner_menu2 h3, #left_inner_menu3 h3 
 {
 	background: #FBDA95; /* #ffffff url(../images/pi_left_menu_h3.jpg) repeat-x; */ /* CAMBIO VLAKOV 11-02-2009 */
 	color: #666666;
@@ -371,52 +363,6 @@ table.content_table
     color:#CC6600; 
 }
 
-/*
-#right_inner_menu1 .moduletable {
-	border-bottom: 3px double #FFC368;
-}
-
-#right_inner_menu2 .moduletable {
-	border-bottom: 3px double #FFC368;
-}
-
-#right_inner_menu3 .moduletable {
-	border-bottom: 3px double #FFC368;
-}
-
-#right_inner_menu4 .moduletable {
-	border-bottom: 3px double #FFC368;
-}
-
-#right_inner_menu5 .moduletable {
-	border-bottom: 3px double #FFC368;
-}
-*/
-
-#right_inner_menu1 .moduletable {
-/*	border-bottom: 1px solid #C9C9C9; */
-}
-
-#right_inner_menu2 .moduletable {
-/*	border-bottom: 1px solid #C9C9C9; */
-}
-
-#right_inner_menu3 .moduletable {
-/*	border-bottom: 1px solid #C9C9C9; */
-}
-
-#right_inner_menu4 .moduletable {
-/*	border-bottom: 1px solid #C9C9C9; */
-}
-
-#right_inner_menu5 .moduletable {
-/*	border-bottom: 1px solid #C9C9C9; */
-}
-
-#right_inner_menu3 .moduletable .factbuffet h3 {
-	border-top: 0px solid #FFF;
-}
-
 /* menu de usuario */
 .user_inner_title
 {
@@ -471,23 +417,14 @@ table td.body_outer
 	background: url(../images/button_bg.png) repeat-x;
 }
 
-#footer 
-{
-	background-color: #6788a6;
-}
-
 a:link, a:visited 
 {
-	color: #0066ee; /* #6788a7; */
+	color: #0066cc; /* #6788a7; */
 }
 
 a:hover 
 {
 	color: #900; 	
-}
-
-td.contentheading a {
-	color: #134a81;
 }
 
 table.contentpaneopen 
@@ -497,7 +434,7 @@ table.contentpaneopen
 
 table.contentpaneopen a {
 	color: #134a81; /* #6788a7; */
-	color: #0055cc;
+	color: #0066ee;
 }
 
 /* cajas de busqueda */
@@ -591,7 +528,7 @@ table.moduletable th
 
 .contentheading
 {
-	color: #134Aaa;
+	color: #134A81;
 }
 
 .content_rating {
@@ -601,7 +538,7 @@ table.moduletable th
 /* Estos sirven cuando se enlaza al resultado de un componente */
 .componentheading 
 {
-	background: url(../images/pi_content_title_bg.jpg) repeat-x; /* se borró el repeat-x 20090820  */
+	background: url(../images/pi_content_title_bg.jpg) repeat-x;
 	color: #666666;
 }
 
@@ -672,7 +609,7 @@ table.moduletable-footer
 
 #buffet h3 {
 	color: #FFFFFF; 
-	background-color: #247;
+	background-color: #999999;
 }
 
 #buffet h3 a {
@@ -680,7 +617,7 @@ table.moduletable-footer
 }
 
 #buffet {
-/*		background: #EEEEEE; */
+		background: #EEEEEE;
 }
 
 table.contenttoc 
@@ -770,6 +707,3 @@ a.mainlevel-user:hover
 background:maroon;
 color:yellow;
 }
-
-.moduletableh1n1 a.colapslist { color: #DE6600; }
-
